Fri Oct 27 21:41:25 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS:
        * ace/Select_Reactor_Base.inl:
        * ace/Select_Reactor_Base.cpp:
        * ace/TP_Reactor.inl:
        * ace/TP_Reactor.cpp:
        * tests/run_test.lst:

          The fix for bug 2653. Thanks to Scott Mitchell <rsm at progress
          dot com> and Chris Reed <cr at progress dot com> for the
          considerable effort they put in helping to isolate this problem.

Fri Oct 27 21:28:36 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_2653_Regression_Test.cpp:
        * tests/tests.mpc:

          Added a new regression test. Without the accompaning fix, the
          test coredump. If you comment out the call to test_for_crash,
          the test will spin madly for 5 seconds, then abort. With the
          pending fix to the TP reactor, the test has no errors.

Fri Oct 27 19:48:23 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Filecache.cpp (ACE_Filecache_Object):

          Cast -1 to size_t.  Ugly (and works), but currently necessary.
          Addresses "passing negative value" warnings.

Fri Oct 27 19:28:16 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_stdio.inl (flock_adjust_params):
        * ace/OS_NS_sys_stat.inl (filesize):

          Fixed comparison of signed/unsigned warnings.

Fri Oct 27 09:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration_Import_Export.cpp:
          Explicitly initialise pointer to 0 to silence warning in
          gcc cygwi build

Fri Oct 27 01:58:09 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        From Russell Mora <russell_mora at symantec dot com>
        * ace/ACE.cpp:
        * ace/ACE.h:
        * ace/FILE.cpp:
        * ace/File_Lock.h:
        * ace/File_Lock.inl:
        * ace/Filecache.cpp:
        * ace/Filecache.h:
        * ace/Local_Memory_Pool.cpp:
        * ace/MEM_Acceptor.h: